--- a/lessons/neural_networks_part2.ipynb
+++ b/lessons/neural_networks_part2.ipynb
@@ -305,8 +305,7 @@
     }
    ],
    "source": [
-    "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "device = \"cpu\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using {device} device\")"
    ]
   },
