--- a/lessons/neural_networks_part2.ipynb
+++ b/lessons/neural_networks_part2.ipynb
@@ -472,7 +472,7 @@
     "$$\n",
     "z^{[l]} = W^{[l]} a^{[l-1]} + b^{[l]} \\in \\mathbb{R}^{n_l} \\quad \\text{for} \\; l=2, 3, \\ldots, L.\n",
     "$$\n",
-    "where $z_j^{[l]}$, the $j$-th component of $z_j^{[l]}$ is the _weighted input$ for neuron $j$ at layer $l$.\n",
+    "where $z_j^{[l]}$, the $j$-th component of $z_j^{[l]}$ is the _weighted input_ for neuron $j$ at layer $l$.\n",
     "\n",
     "Secondly,\n",
     "$$\n",
